The Change Log for FloatCanvas. 4/09/2007

* fixed hit-test bug on OS-X! This required a bit of a re-factor,
  but it works now.

* A bunch of merging of changes into the SVN version Christian set up

* Changed the keyword "underline" to "underlined" everywhere in the
various font code.  -- there was a mixture before.

3/06/2007 * Update for wxPython 2.8.1 - Added a hack to get around
toolbar bug with 2.8.1 on OS-X -

-2/13/2007

* Fixed a bug where GUI.UpdateScreen was called on None.

* Fixed a bug in Demos/MouseTest.py -- GUIMode can't be imported until
after a wx.App is created.


*****Release 0.9.17*****

-1/19/2007 * Only fully tested and working with wxPython2.6

* Tested with wxPython 2.8 on OS-X: Hit-testing doesn't work, I expect
that it's a change in the binary format of the off-screen bitmap Also
the "Zoom To Fit" button isn't showing up in the toolbar of NavCanvas.

It's been a while -- I hope I catch them all:

*Refactored the way Mouse events are handled. This was inspired, and
some of the code written, but Christian Blouin. There is now a GUIMode
module that holds a set of classes for handling all the mouse events. So
now the FloatCanvas.SetMode() method takes a GUIMode object as input,
rather than a string. To impliment your own GUI modes, you can create a
new GUIMode object, subclassed from GUIMode.GUIBase, or one of the
existing modes, changing only those handlers that you want to change.
The hope is that this will make it easier to make apps that allow the
user to interact with the canvas: simply set up a new GUI mode that does
what you want. Unfortuately, I haven't integrated that into any of the
demos yet!

* Changed the default ZoomIn, ZoomOut, and Move modes so that the mouse
wheel zooms in and out -- kind of like Google Earth.

* Completed the transition to numpy 1.*

* The mouse move event is always raised in the standard GUI modes.

* Cleaned up the NavCanvas code a lot: RadioTool, lamdas to pass the
modes, etc.
